# anno-save-analyzer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  codecov.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml
docs/: Makefile  ROADMAP.ja.md  ROADMAP.md  factory_extraction_spike.md  filedb_format_investigation.md  rda_format_spec.md  v0.3-trade-history-design.ja.md  v0.3-trade-history-design.md
docs/source/: conf.py  index.md
docs/source/_static/: custom.css
docs/source/api/: analysis.rst  cli.rst  gui.rst  index.md  parser.rst  trade.rst  tui.rst
docs/source/guide/: decision-matrix.md  quickstart.md  scm-analytics.md
docs/source/ja/: roadmap.md
docs/source/locales/ja/LC_MESSAGES/: index.po  roadmap.po
docs/source/locales/ja/LC_MESSAGES/api/: analysis.po  cli.po  gui.po  index.po  parser.po  trade.po  tui.po
docs/source/locales/ja/LC_MESSAGES/design/: v0.3-trade-history-design.po
docs/source/locales/ja/LC_MESSAGES/guide/: decision-matrix.po  quickstart.po  scm-analytics.po
docs/source/locales/ja/LC_MESSAGES/reference/: factory_extraction_spike.po  filedb_format_investigation.po  rda_format_spec.po  session_binary_investigation.po
docs/source/reference/: filedb_format_investigation.md  session_binary_investigation.md
notebooks/: island_inventory.ipynb
scripts/: extract_calculator_data.mjs  generate_buildings_anno1800.py  generate_items_anno117.py  generate_items_anno1800.py  generate_supply_data_anno1800.py  package-lock.json  package.json
src/anno_save_analyzer/: __init__.py  config.py  latest_save.py
src/anno_save_analyzer/analysis/: __init__.py  allocation.py  correlation.py  deficit.py  forecast.py  frames.py  optimize.py  persistence.py  prescribe.py  routes.py  sensitivity.py
src/anno_save_analyzer/cli/: __init__.py  __main__.py  _title.py  state.py  trade.py  tui.py
src/anno_save_analyzer/data/: buildings_anno1800.en.yaml  buildings_anno1800.ja.yaml  consumption_anno1800.en.yaml  consumption_anno1800.ja.yaml  factory_recipes_anno1800.en.yaml  factory_recipes_anno1800.ja.yaml  items_anno117.en.yaml  items_anno117.ja.yaml  items_anno1800.en.yaml  items_anno1800.ja.yaml
src/anno_save_analyzer/gui/: __init__.py  __main__.py  main_window.py  viewmodels.py
src/anno_save_analyzer/parser/: pipeline.py
src/anno_save_analyzer/parser/filedb/: __init__.py  dictionary.py  dom.py  exceptions.py  session.py  version.py  xml.py
src/anno_save_analyzer/parser/rda/: __init__.py  archive.py  block.py  exceptions.py  header.py
src/anno_save_analyzer/trade/: __init__.py  aggregate.py  analysis.py  balance.py  buildings.py  chart_window.py  clock.py  consumption.py  diff.py  exports.py  extract.py  factories.py  factory_recipes.py  html_export.py  items.py  models.py  population.py  routes.py  sessions.py  storage.py
src/anno_save_analyzer/trade/interpreter/: __init__.py  anno117.py  anno1800.py  base.py
src/anno_save_analyzer/tui/: __init__.py  app.py  i18n.py  sparkline.py  state.py  theme.py
src/anno_save_analyzer/tui/locales/: en.yaml  ja.yaml
src/anno_save_analyzer/tui/screens/: __init__.py  overview.py  production_overview.py  statistics.py  supply_balance.py
tests/: test_config.py  test_latest_save.py
tests/analysis/: conftest.py  test_allocation.py  test_analyzers.py  test_frames.py  test_optimize.py  test_prescribe.py
tests/cli/: test_state.py  test_title_resolver.py  test_trade.py  test_tui_cmd.py
tests/gui/: conftest.py  test_main_entry.py  test_main_window.py  test_viewmodels.py
tests/integration/: test_balance_pipeline.py  test_scaffold.py  test_state_factories.py
tests/parser/: test_pipeline.py  test_rda.py  test_rda_edges.py
tests/parser/filedb/: conftest.py  test_dictionary.py  test_dom.py  test_session.py  test_version.py  test_xml.py
tests/system/: test_scaffold.py
tests/trade/: conftest.py  test_aggregate.py  test_analysis.py  test_anno1800_factories_smoke.py  test_anno1800_smoke.py  test_anno1800_tier_breakdown_smoke.py  test_balance.py  test_buildings.py  test_chart_window.py  test_clock.py  test_consumption.py  test_diff.py  test_exports.py  test_extract.py  test_extract_a8s.py  test_extract_extra.py  test_factories.py  test_factory_recipes.py  test_html_export.py  test_interpreter_anno117.py  test_items.py  test_items_extra.py  test_models.py  test_population.py  test_routes.py  test_sessions.py  test_storage.py
tests/tui/: conftest.py  test_app.py  test_i18n.py  test_production_overview.py  test_screens.py  test_sparkline.py  test_state.py  test_supply_balance_screen.py  test_theme.py
