[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anno-save-analyzer"
version = "0.4.2"
description = "Anno 1800 / 117 セーブデータ解析ツール"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Proletariat Yuuka", email = "sounyan.is.the.angel@gmail.com" }]
dependencies = [
    "lxml>=6.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pandas>=2.0",
    "typer>=0.12",
]

[project.optional-dependencies]
optimizer = ["ortools>=9.0"]
tui = ["textual>=0.80", "textual-plotext>=0.2"]
web = ["fastapi", "uvicorn"]
viz = ["duckdb"]
notebook = ["jupyterlab>=4.0"]

[project.scripts]
anno-save-analyzer = "anno_save_analyzer.cli.__main__:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
    "mypy>=1.10",
    "textual>=0.80",
    "textual-plotext>=0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/anno_save_analyzer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
]

[tool.coverage.run]
branch = true
source = ["anno_save_analyzer"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
# ポートフォリオ OSS として 100% は過剰．以下の根拠で 90% を採用:
# 1. safety-critical ではない (読み取り専用解析ツール，人命 / 金融リスク無し)
# 2. 業界相場 (Google / FastAPI / Django 系) は 80-90%
# 3. AI review agent (Copilot / Cursor) の修正サイクルで 100% 再達成の摩擦が高く
#    dogfood スピードを落とす
# 4. 純関数層 (parser / trade.aggregate / trade.diff / trade.exports 等) は
#    依然実質 100% を維持 — UI / async layer の pragma 戦いを緩和するのが目的
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]
