[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anno-save-analyzer"
version = "0.4.2"
description = "Anno 1800 / 117 セーブデータ解析ツール"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Proletariat Yuuka", email = "sounyan.is.the.angel@gmail.com" }]
dependencies = [
    "lxml>=6.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pandas>=2.0",
    "typer>=0.12",
    "networkx>=3.0",
]

[project.optional-dependencies]
optimizer = ["ortools>=9.0"]
tui = ["textual>=0.80", "textual-plotext>=0.2"]
gui = ["PySide6>=6.6"]
web = ["fastapi", "uvicorn"]
viz = ["duckdb"]
notebook = ["jupyterlab>=4.0"]

[project.scripts]
anno-save-analyzer = "anno_save_analyzer.cli.__main__:app"
anno-save-analyzer-gui = "anno_save_analyzer.gui.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "pytest-qt>=4.4",
    "ruff>=0.5",
    "mypy>=1.10",
    "textual>=0.80",
    "textual-plotext>=0.2",
    "PySide6>=6.6",
    # Sphinx docs (GitHub Pages)．``make -C docs html`` と CI workflow で使う．
    "sphinx>=7.3",
    "furo>=2024.5",
    "myst-parser>=4.0",
    "sphinx-autodoc-typehints>=2.0",
    "autodoc-pydantic>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/anno_save_analyzer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    # GUI tests (pytest-qt + PySide6) は default で除外．書記長が手動で
    # ``pytest -m gui`` を打つ or Windows CI job でのみ実行する．
    "-m", "not gui",
]
markers = [
    # 実 save を舐める / 大きい fixture を走査する重いテスト．
    "slow: 実 save を読む / 巨大 DOM を走査するなど数秒オーダーの試験",
    # 複数 module またぐ結合試験 (tests/integration/)．CI は引き続き走らせる前提．
    "integration: save → extract → model → render の複数 layer 結合",
    # CLI / GUI など entrypoint 起動まで含むシステム試験 (tests/system/)．
    # sample save に依存する場合が多く，CI は workflow_dispatch 時のみを想定．
    "system: CLI / GUI entrypoint 起動を含む end-to-end",
    # PySide6 GUI package の widget テスト．pytest-qt 要．Linux CI は
    # ``QT_QPA_PLATFORM=offscreen`` で動かすが実機検証は Windows runner．
    "gui: pytest-qt を使う GUI widget 試験",
]

[tool.coverage.run]
branch = true
source = ["anno_save_analyzer"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
# ポートフォリオ OSS として 100% は過剰．以下の根拠で 90% を採用:
# 1. safety-critical ではない (読み取り専用解析ツール，人命 / 金融リスク無し)
# 2. 業界相場 (Google / FastAPI / Django 系) は 80-90%
# 3. AI review agent (Copilot / Cursor) の修正サイクルで 100% 再達成の摩擦が高く
#    dogfood スピードを落とす
# 4. 純関数層 (parser / trade.aggregate / trade.diff / trade.exports 等) は
#    依然実質 100% を維持 — UI / async layer の pragma 戦いを緩和するのが目的
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]
